<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Sessions">
        <EditTextPreference
            android:defaultValue="@string/pref_default_pomodoro_time"
            android:inputType="number"
            android:numeric="integer"
            android:key="pomodoro_time"
            android:maxLines="1"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/pref_title_pomodoro_time" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_break_time"
            android:inputType="number"
            android:numeric="integer"
            android:key="break_time"
            android:maxLines="1"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_break_time" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_long_break_time"
            android:inputType="number"
            android:numeric="integer"
            android:key="long_break_time"
            android:maxLines="1"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_long_break_time" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_sessions"
            android:inputType="number"
            android:numeric="integer"
            android:key="sessions_till_long_break"
            android:maxLines="1"
            android:maxLength="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_sessions" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="General">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pomodoro_clock_sound"
            android:summary="@string/pref_description_pomodoro_clock_sound"
            android:title="@string/pref_title_pomodoro_clock_sound" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="break_clock_sound"
            android:summary="@string/pref_description_break_clock_sound"
            android:title="@string/pref_title_break_clock_sound" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="continuous_mode"
            android:summary="@string/pref_description_continuous_mode"
            android:title="@string/pref_title_continuous_mode" />

        <RingtonePreference
            android:key="notification_sound"
            android:title="Ringtone"
            android:summary="Select ringtone"
            android:ringtoneType="notification"
            android:showDefault="true" />
    </PreferenceCategory>

</PreferenceScreen>