<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pomodoro_clock_sound"
        android:summary="@string/pref_description_pomodoro_clock_sound"
        android:title="@string/pref_title_pomodoro_clock_sound" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="break_clock_sound"
        android:summary="@string/pref_description_break_clock_sound"
        android:title="@string/pref_title_break_clock_sound" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="continuous_mode"
        android:summary="@string/pref_description_continuous_mode"
        android:title="@string/pref_title_continuous_mode" />

    <RingtonePreference
        android:key="notification_sound"
        android:title="Ringtone"
        android:summary="Select ringtone"
        android:ringtoneType="notification"
        android:showDefault="true" />

</PreferenceScreen>
